<resources>
    <string name="app_name">Firebase</string>
    <string name="login">login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="registro">registro</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">logout</string>

</resources>